# srrg_semantic_map_extraction

./: CMakeLists.txt  README.md  package.xml
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  grid_map_example.cpp  semantic_map_example.cpp
src/srrg_semantic_map_extraction/: CMakeLists.txt  cell.cpp  cell.h  color_extractor.cpp  color_extractor.h  grid_map.cpp  grid_map.h  lines_extractor.cpp  lines_extractor.h  object.cpp  object.h  room_map.cpp  room_map.h  semantic_map_extractor.cpp  semantic_map_extractor.h  semantic_matrix.cpp  semantic_matrix.h  structure_analyzer.cpp  structure_analyzer.h
